@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.1229 2003/01/25 12:10:08 rh Exp $
+$NetBSD: CHANGES,v 1.1230 2003/01/25 12:35:46 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -408,3 +408,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated hpijs to 1.3 [toshii 2003-01-25]
 	Updated Gorm to 0.2.5 [rh 2003-01-25]
 	Updated lbreakout to 010315nb1 [rh 2003-01-25]
+	Updated guile-gtk to 0.19nb1 [jlam 2003-01-25]
